[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/font_other.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/font_default.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sounds/level_failure.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/ui_back.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/ui_select.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/ui_enter.ogg" type="AudioStream" id=6]
[ext_resource path="res://GameOver.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 125
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1050.0
margin_bottom = 700.0
color = Color( 0.0941176, 0.137255, 0.207843, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -490.0
margin_top = 140.0
margin_right = 490.0
margin_bottom = 329.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = 42.0
margin_right = 285.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.341176, 0.733333, 1 )
custom_colors/font_color_pressed = Color( 0, 0.0117647, 0.443137, 1 )
text = "Try Again?"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = 133.0
margin_right = 285.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.341176, 0.733333, 1 )
custom_colors/font_color_pressed = Color( 0, 0.0117647, 0.443137, 1 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Failure" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
autoplay = true

[node name="UISelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="UIBack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="UIEnter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
[connection signal="mouse_entered" from="restart" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="exit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="finished" from="UIBack" to="." method="_on_UIBack_finished"]
[connection signal="finished" from="UIEnter" to="." method="_on_UIEnter_finished"]
